WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
293340
Cannot get value of exnref global
https://bugs.webkit.org/show_bug.cgi?id=293340
Summary
Cannot get value of exnref global
seyoon1705
Reported
2025-05-20 22:55:45 PDT
Created
attachment 475328
[details]
import_exnref_global.js Commit version: 9d02067f5de4b0402f58d6c83039e206439a8a8c System: Ubuntu 20.04.6 LTS, x86_64 The following is Wast code that exports and imports a exnref global. ``` ;; import_exnref_global.wast (module (global (export "g") (ref null exn) (ref.null exn)) ) (register "M") (module (import "M" "g" (global (ref null exn))) ) ``` It is valid export and import, so the modules must be instantiated without error. However, when running `import_exnref_global.js`, the equivalent JavaScript file, JavaScriptCore raises runtime error. ``` $ jsc test.js Exception: RuntimeError: Cannot get value of exnref global (evaluating 'new WebAssembly.Instance(mod, imports)') Instance@[native code]
instance@test.js
:29:34 global
code@test.js
:40:18 ```
Attachments
import_exnref_global.js
(1.08 KB, application/x-javascript)
2025-05-20 22:55 PDT
,
seyoon1705
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-05-27 22:56:12 PDT
<
rdar://problem/152134182
>
EWS
Comment 2
2026-07-16 09:35:54 PDT
Committed
317326@main
(e1171d7da90f): <
https://commits.webkit.org/317326@main
> Reviewed commits have been landed. Closing PR #69367 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug