[WASM] Allow linking immutable exnref global imports https://bugs.webkit.org/show_bug.cgi?id=293340

Reviewed by Keith Miller.

Importing an immutable (ref null exn) global called Global::get(), which
rejects exnref for the JS API. Wasm-to-wasm linking only needs the stored
reference, not a JS-visible value.

Add Global::getReference() and use it when linking immutable exnref imports.
JS Global.value still rejects exnref.

* Source/JavaScriptCore/wasm/WasmGlobal.h:
(JSC::Wasm::Global::getReference): Added.
* Source/JavaScriptCore/wasm/js/WebAssemblyModuleRecord.cpp:
(JSC::WebAssemblyModuleRecord::initializeImports): Copy exnref via getReference().
* JSTests/wasm/stress/exnref-global-get-segv.js: Assert successful import and null value.

Canonical link: https://commits.webkit.org/317326@main